# AGT_Tanking_Simulations

./: .gitignore  README.md  analysis.py  check_llm.py  create_deck.py  inspect_pptx.py  llm_sweep_run_ids.txt  main.py  make_slides_figures.py  project_report.tex  pyproject.toml  run_llm_sweep.py  simulation_design.tex  test_api.py  test_llm_smoke.py  update_pptx.py
.claude/: settings.local.json
agents/: base.py  honest.py  llm_agent.py  rational.py
data/: db.py  export.py
figures/: AGT_Tanking_Deck.pptx  NBA_Draft_Updated.pptx  ~$NBA_Draft_Updated.pptx
mechanisms/: base.py  bilevel.py  cola.py  nba_321_lottery.py  nba_lottery.py  weighted_loss.py
simulation/: game.py  season.py  skill_update.py  team.py
tests/: test_agents.py  test_game.py  test_mechanisms.py  test_rational_agent.py  test_season_integration.py  test_skill_update.py
