[project]
name = "tankingsimulations"
version = "0.1.0"
description = "NBA tanking simulation: comparing draft lottery mechanism designs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "matplotlib>=3.10.9",
    "numpy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
